Fix the "check" CI/CD pipeline to correctly install requirements.
The CI/CD was planned to use a requirements.txt file; however, the
requirements are already specified in the project pyproject.toml
description and configuration file. Using a separate requirements.txt
would duplicate this information.

Fortunately, pip can install dependencies directly from the
pyproject.toml file, which makes it easy to install dependencies. The
difference with the previous `pip install -r requirements.txt` command
is that the new command also installs the project itself (i.e., our
Python package). We use `--editable` to avoid copying the files
unnecessarily (so-called "developement installations").

Another advantage is that we can clearly use the "extras" requirements.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -58,9 +58,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       # Install the source code dependencies
       - name: Install dependencies
+        # Pip now supports installing from pyproject.toml directly.
+        # We want the `dev` extra dependencies (pytest and flake8).
+        # We want to install this project as a "development installation"
+        # (https://pip.pypa.io/en/stable/topics/local-project-installs/#editable-installs)
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install --editable '.[dev]'
       # Run automatic tests using unittest as the orchestrator
       - name: Test with unittest
         run: python -m unittest tests/test_*.py
