--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ requires-python = ">=3.9"
 dependencies = [
     "numpy>=1.20.0",
     "gymnasium>=0.26.0",
-    "pettingzoo >= 1.20.0",
+    "pettingzoo>=1.20.0",
+    "hydra>=1.2.0",
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -58,6 +59,7 @@ viz = [
     "opencv>=4.5.0",
 ]
 metrics = [
+    "wandb>=0.12.0",
 ]
 
 [project.urls]
