Refactor environment components architecture
Features:
- Moved environment components creation (action_enum, action_handler, observation_strategy, reward_functions, metrics_collector, renderer, grid_world) to make_env function in main.py
- Implemented Single Responsibility Principle: When post_analysis_on=True, create a non-displaying graphical renderer alongside console renderer for video generation
- Replaced import error exceptions with warnings and disable graphical rendering or video creation to avoid errors
- Added parameters to WorldGrid class methods
- Removed agents dependency from ObservationStrategy
- Restructured main.py into three distinct functions:
  * Environment creation
  * Agent algorithms creation
  * Main environment loop
- Updated corresponding tests
- Improved documentation

--- a/configs/grid/from_file.yaml
+++ b/configs/grid/from_file.yaml
@@ -1,21 +1,11 @@
 init_method: "from_file"
 
-# Common parameters for init_from_file
+# Common parameters for every init method
 min_pollution: 0
 max_pollution: 100
 pollution_increment: 1
 num_seeds_returned: 1
 collisions_on: true
-flowers_data:
-  0:
-    price: 10
-    pollution_reduction: [ 0, 0, 0, 0, 5 ]
-  1:
-    price: 5
-    pollution_reduction: [ 0, 0, 1, 3 ]
-  2:
-    price: 2
-    pollution_reduction: [ 1 ]
 
 # Parameters for init_from_file
-file_path: "grid_config.txt"
+file_path: "./grid_config.txt"
