Fix documentation, config and wandb
Features:
- Add PR review's comments to the documentation
- Add a function to find the hydra config for the package and the repo
- Add ignores and the configs directory to the wheel package
- Update index.rst, ReadME.md and __init__.py with the launch commands
Fix WandB runs by adding a finish_episode method to MetricsCollector that is called once the episode is finished (all the agents are either truncated or terminated) to finish the run and create a new run_id

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ docs = [
 ]
 viz = [
     "pygame>=2.0.0",
-    "opencv>=4.5.0",
+    "opencv-python>=4.5.0",
 ]
 metrics = [
     "wandb>=0.12.0",
@@ -67,8 +67,30 @@ metrics = [
 "Bug Tracker" = "https://github.com/ethicsai/ethicalgardeners/issues"
 "Documentation" = "https://ethicsai.github.io/ethical-gardeners/"
 
+# Ignore some files when building with hatchling
+[tool.hatch.build.targets.sdist]
+exclude = [
+    "/.github",
+    "/.venv",
+    "/.gitignore",
+    "/docs",
+    "/*.csv",
+    "/*.zip",
+    "/tests",
+    "/others",
+    "/wandb",
+    "/outputs",
+    "/videos",
+    "/metrics",
+    "/dist",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["ethicalgardeners"]
+
+# Also include the `config` folder, and move it to `ethicalgardeners/config` when installed.
+[tool.hatch.build.targets.wheel.force-include]
+"configs" = "ethicalgardeners/configs"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
