--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,10 @@ viz = [
 metrics = [
     "wandb>=0.12.0",
 ]
+algorithms = [
+    "stable-baselines3>=2.0.0",
+    "sb3-contrib>=2.0.0",
+]
 
 [project.urls]
 "Source code" = "https://github.com/ethicsai/ethicalgardeners"
