Fix hydra logging directory
Features:
- Add hydra override in config.yaml to put the hydra logs in the same directory as the metrics
- Delete hydra configs logs if export_on is False (not main.log because when the program is running, main.log is being used to write into)
- Change metrics output directory using timestamps for easier reading
- Fix informations in tutorials
- Fix flower harvesting by adding the ‘planted_by’ attribute to keep track of which agent planted the flower to remove it from its flowers_planted dictionary instead of removing it from the agent that harvested the flower

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,3 +10,9 @@ defaults:
 random_seed: 42
 num_iterations: 1000
 render_mode: "human"  # "none" or "human"
+
+# Hydra overrides
+hydra:
+  run:
+    dir: ${metrics.out_dir_path}   # put Hydra outputs next to the metrics
+  output_subdir: .hydra
