Modify outputs directory for videos
Features:
- Put the simulation_video inside the same directory as metrics by default
- Rename metrics output file to correspond to the video's name
- Modify default values of get in make_env to outputs for metrics and renderers

--- a/configs/renderer/console.yaml
+++ b/configs/renderer/console.yaml
@@ -3,7 +3,7 @@ graphical:
 console:
   enabled: true
   post_analysis_on: true
-  out_dir_path: "./videos"
+  out_dir_path: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   characters:
     ground: " "
     obstacle: "#"
