--- a/configs/renderer/full.yaml
+++ b/configs/renderer/full.yaml
@@ -1,7 +1,7 @@
 graphical:
   enabled: true
   post_analysis_on: true
-  out_dir_path: "./videos"
+  out_dir_path: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   cell_size: 50
   colors:
     background: [255, 255, 255]
@@ -10,7 +10,7 @@ graphical:
 console:
   enabled: true
   post_analysis_on: false
-  out_dir_path: "./videos"
+  out_dir_path: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   characters:
     ground: " "
     obstacle: "#"
